Build 2501
v1.37.0.2501 Huge Update & Minecraft 1.21.6-8 Support

!! Please backup your HavenBags files, because after updating to this you can't to back to an older version!

Important: This update requires ValorlessUtils v1.15.2.297 or newer in order to work.

Important: HavenBags now uses PDC instead of NBT, to help ensure bags get converted smoothly, HavenBags will continue to support NBT on versions 1.21.7 and under.
Convertion happens automatically, you won't have to do a thing.

Important: HavenBags no longer supports Minecraft 1.18 or 1.19.

Added: Support for Minecraft 1.21.6/1.21.7/1.21.8

Added: Option to prevent bags going into bundles.
Checks both if you're holding a bag and clicking a bundle, or vice versa.
[code="yaml"]config.yml

# Can bags be put inside bundles?
bags-in-bundles: false[/code]
[code="yaml"]lang.yml

# Message sent if clicking a bundle with a bag.
bag-in-bundles-error: '&cBags cannot be put inside bundles.'[/code]

Added: Config value "magnet.tick-rate", control how often the magnet feature ticks.
Will require a plugin reload to change.
(Cant go under 1, as that'd crash the server. default is 2. Higher values may have choppy results)

Added: New upgrade GUI for upgrading and applying skins to bags.
Opened by right-clicking a Fletching Table will open the gui.
You can customize the gui in config.yml
[code="yaml"]# Should upgrades and skins be applied through an anvil?
bag-upgrades-anvil: false

# Custom GUI used to upgrade and skin bags.
upgrade-gui:
 enabled: true
 block: FLETCHING_TABLE
 noteblock: # Requires "block" to be NOTE_BLOCK.
  instrument: BASS_DRUM # https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Instrument.html
  note: 0
 title: '&eBag Upgrade'
 gui-size: 27 # Must be to the power of 9. i.e. Rows*9, 3*9 = 27
 slots:
  bag: 10 # Bag and Token can be used interchangeable.
  token: 12
  result: 15 # upgrade/skin result
 filler: GRAY_STAINED_GLASS_PANE # Set to AIR to have no fillers, useful when using custom gui.
 custom-